# more-fillings-one-source-of-truth

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  render.yaml
ahcc/: __init__.py  cli.py  config.py  orchestrator.py  schemas.py  user_context.py  worker.py
ahcc/align/: __init__.py  glossary.py  matcher.py
ahcc/api/: __init__.py  job_runner.py  main.py  main.py.bak-20260620  routes_job.py  routes_review.py  routes_user.py
ahcc/check/: __init__.py  bilingual.py  branch_disclosure.py  chart.py  coverage.py  disclosure.py  explanation.py  key_metric_tamper.py  numeric.py  rule_runner.py  standard.py  text_overlay_tamper.py
ahcc/eval/: __init__.py  matcher.py
ahcc/llm/: __init__.py  client.py
ahcc/parser/: __init__.py  audit.py  chart_detect.py  ocr_fallback.py  pdf_a.py  pdf_h_html.py  table_extract.py
ahcc/profile/: __init__.py  compare.py  expected_diffs.py  extract_metrics.py  extract_narratives.py  extract_structure.py  models.py  topic_map.py
ahcc/rag/: __init__.py  builder.py  retriever.py  retriever.py.bak-20260620
ahcc/report/: __init__.py  _charts.py  _style.py  excel.py  html.py  pdf.py  working_paper.py
ahcc/storage/: __init__.py  models.py  repository.py
ahcc/vlm/: __init__.py  qwen_vl.py
docs/: architecture.md  demo_script.md  edgeone_deployment.md  pitch_outline.md  risk_register.md  zeabur_deployment.md
functions/: _proxy.js  health.js
functions/api/: [[default]].js
kb/: glossary_zh_en.csv
kb/standards/: 00_README.md  01_goodwill.md  02_rnd_capitalize.md  03_investment_property.md  04_government_grant.md  05_long_term_investment.md  06_revenue_recognition.md  07_lease.md  08_financial_instruments.md  09_related_party.md  10_common_control_merger.md  11_perpetual_bond.md  12_esg_disclosure.md  (+3 more)
rules/: cross_check.yaml  disclosure.yaml  numeric_equal.yaml
scripts/: benchmark_core.py  benchmark_output.txt  benchmark_shenwan2020.py  benchmark_shenwan2020_detail.py  benchmark_shenwan2020_regex.py  branch_distribution.txt  branch_tables.txt  build_kb.py  check_a_revenue.py  check_revenue_bytes.py  core_e2e_test.py  debug_a_total_assets.py  debug_a_total_assets_v2.py  debug_anchor.py  debug_dividend_severity.py  debug_equity.py  debug_everbright.py  debug_extract.py  debug_h_bs_page.py  debug_h_cash.py  debug_h_encoding.py  debug_h_extract.py  debug_h_extraction.py  debug_h_op.py  debug_h_op_output.txt  debug_h_sections.py  debug_h_tables.py  debug_h_total_assets.py  debug_keypoints.py  debug_keypoints2.py  debug_llm.py  debug_llm2.py  debug_operating_profit.py  debug_table_extract.py  demo_cache_dump.py  e2e_demo_output.txt  e2e_output.txt  e2e_output_v2.txt  e2e_test.py  eval_samples.py  (+45 more)
tests/: conftest.py  test_bilingual_checker.py  test_bilingual_currency.py  test_bilingual_orchestrator.py  test_bilingual_semantic_fallback.py  test_branch_check_pipeline.py  test_bugfix_regressions.py  test_chart_detect.py  test_eval_answer_loader.py  test_event_false_positive_filtering.py  test_extraction_audit.py  test_job_company_metadata.py  test_job_runner.py  test_llm_client_fallback.py  test_orchestrator_report_timing.py  test_parse_garbled_ocr_budget.py  test_profile_pipeline.py  test_report_download_api.py  test_report_export.py  test_rule_runner.py  test_samples_regression.py  test_schemas.py  test_static_company_ui.py  test_static_direct_file_mode.py  test_text_overlay_tamper.py  test_ui_new_app.py  test_user_mode.py
ui-new/: index.html  package-lock.json  package.json  vite.config.ts
(+25 files in other folders)
