[project]
name = "ahcc"
version = "0.1.0"
description = "A+H Consistency Checker — KPMG 黑客松 Challenge #1"
requires-python = ">=3.10"
authors = [{ name = "KPMG Hackathon Team" }]
dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "streamlit>=1.39",
    "python-multipart>=0.0.9",

    # 数据契约 & 配置
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # PDF / HTML 解析
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "camelot-py[cv]>=0.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",

    # OCR / 表格识别
    "paddleocr>=2.7",
    # PPStructure 包含在 paddleocr 中

    # LLM / RAG
    "openai>=1.40",           # 兼容 DashScope / DeepSeek / Moonshot OpenAI 兼容接口
    "dashscope>=1.20",        # 通义千问原生 SDK（多模态）
    "zhipuai>=2.1",           # 智谱 GLM-4
    "chromadb>=0.5",
    "sentence-transformers>=3.0",  # BGE-M3 加载

    # 报告生成
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "python-docx>=1.1",       # KPMG 工作底稿 Word 附件
    "python-pptx>=1.0",       # 路演 PPT

    # 工具
    "httpx>=0.27",
    "tenacity>=9.0",          # LLM 调用重试
    "rich>=13.7",             # CLI 输出美化
    "typer>=0.12",            # CLI 入口
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
ahcc = "ahcc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line-too-long 由 formatter 处理

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
