[project]
name = "ahcc"
version = "0.1.0"
description = "A+H Consistency Checker — automated cross-market annual report data consistency verification"
requires-python = ">=3.10"
authors = [{ name = "AHCC Contributors" }]
license = { text = "MIT" }
dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # 数据契约 & 配置
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",

    # PDF / HTML 解析
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "opencc-python-reimplemented>=0.1.7",
    "camelot-py[cv]>=0.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",

    # LLM / RAG（核心 SDK；重型模型/RAG 向量库放 optional）
    "openai>=1.40",           # DeepSeek OpenAI 兼容接口
    "httpx>=0.27",
    "tenacity>=9.0",          # LLM 调用重试

    # 报告生成
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "matplotlib>=3.8",        # PDF/Excel 共用的精致分布图（甜甜圈/水平条）渲染
    "python-docx>=1.1",       # 工作底稿 Word 附件
    "python-pptx>=1.0",       # 路演 PPT

    # 工具
    "rich>=13.7",             # CLI 输出美化
    "typer>=0.12",            # CLI 入口
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]
heavy = [
    "paddleocr>=2.7",              # OCR / PPStructure
    "chromadb>=0.5",               # RAG 向量库
    "sentence-transformers>=3.0",  # BGE-M3 加载
]
all = [
    "ahcc[dev,heavy]",
]

[project.scripts]
ahcc = "ahcc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line-too-long 由 formatter 处理

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
